--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -305,7 +305,7 @@ model-viewer {
 .image1 {
   width: 100%;
   height: 500px;
-  background: url("./img1");
+  background: url(./img1);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
